@@ -8,6 +8,8 @@
 	appropriate.
 	* lib/rubygems/uninstaller.rb:  Call pre/post uninstall hooks as
 	appropriate.  Minor refactoring of #uninstall.
+	* lib/rubygems/package/tar_reader.rb:  Some OSs raise EINVAL on seek.
+	Based on patch in bug #20791 by Neil Wilson.
 
 2008-06-25  Eric Hodel  <drbrain@segment7.net>
 
